--- a/one_point/css/style.css
+++ b/one_point/css/style.css
@@ -1,11 +1,18 @@
 /* CSS Document */
 /* Author: Josh Story */
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
 html {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   background: #101010;
+}
+body {
+  font-family: "Rubik", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 *,
@@ -21,4 +28,56 @@ html {
   border: 6px outset #eee !important;
   box-shadow: 8px 8px 28px 8px rgba(0, 0, 0, 0.6) !important;
   background: linear-gradient(120deg, #202020, #000) !important;
+}
+
+button {
+  border-radius: 8px !important;
+  box-shadow: 5px solid rgba(0, 0, 0, 0.6) !important;
+}
+
+button:active {
+  border: 2px solid inset;
+  background-color: rgb(200, 0, 0) !important;
+  width: 98px !important;
+  height: 24px !important;
+  box-shadow: inset 5px solid rgba(0, 0, 0, 0.6) !important;
+}
+
+input {
+  color: red;
+}
+
+.sliderV::before {
+  content: "VOLUME";
+  line-height: 48px;
+  display: block;
+  position: fixed;
+}
+
+.sliderA::before {
+  content: "ATTACK";
+  line-height: 48px;
+  display: block;
+  position: fixed;
+}
+
+.sliderS::before {
+  content: "SUSTAIN";
+  line-height: 48px;
+  display: block;
+  position: fixed;
+}
+
+.sliderD::before {
+  content: "DECAY";
+  line-height: 48px;
+  display: block;
+  position: fixed;
+}
+
+.sliderR::before {
+  content: "RELEASE";
+  line-height: 48px;
+  display: block;
+  position: fixed;
 }
