--- a/one_point/css/style.css
+++ b/one_point/css/style.css
@@ -8,10 +8,11 @@ html {
   text-rendering: optimizeLegibility;
   background: #101010;
 }
+
 body {
   font-family: "Rubik", serif;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 900;
   font-style: normal;
 }
 
@@ -26,58 +27,101 @@ body {
   position: relative !important;
   margin: 3em auto;
   border: 6px outset #eee !important;
+  border-radius: 8px;
   box-shadow: 8px 8px 28px 8px rgba(0, 0, 0, 0.6) !important;
-  background: linear-gradient(120deg, #202020, #000) !important;
+  background: linear-gradient(120deg, #ccc, #999) !important;
 }
 
 button {
   border-radius: 8px !important;
-  box-shadow: 5px solid rgba(0, 0, 0, 0.6) !important;
+  box-shadow: 5px 3px 3px solid rgba(0, 0, 0, 0.6) !important;
 }
 
 button:active {
   border: 2px solid inset;
-  background-color: rgb(200, 0, 0) !important;
+  background-color: rgb(0, 75, 125) !important;
   width: 98px !important;
   height: 24px !important;
   box-shadow: inset 5px solid rgba(0, 0, 0, 0.6) !important;
 }
 
 input {
-  color: red;
+  color: rgb(30, 45, 50);
 }
 
 .sliderV::before {
   content: "VOLUME";
   line-height: 48px;
   display: block;
-  position: fixed;
+  position: fixed !important;
 }
 
 .sliderA::before {
   content: "ATTACK";
   line-height: 48px;
   display: block;
-  position: fixed;
+  position: fixed !important;
 }
 
 .sliderS::before {
   content: "SUSTAIN";
   line-height: 48px;
   display: block;
-  position: fixed;
+  position: fixed !important;
 }
 
 .sliderD::before {
   content: "DECAY";
   line-height: 48px;
   display: block;
-  position: fixed;
+  position: fixed !important;
 }
 
 .sliderR::before {
   content: "RELEASE";
   line-height: 48px;
   display: block;
-  position: fixed;
+  position: fixed !important;
+}
+
+.sliderDist::before {
+  content: "DISTORTION";
+  line-height: 48px;
+  display: block;
+  position: fixed !important;
+}
+
+.sliderRev::before {
+  content: "REVERB";
+  line-height: 48px;
+  display: block;
+  position: fixed !important;
+}
+
+.sliderDelay::before {
+  content: "DELAY LEVEL";
+  line-height: 48px;
+  display: block;
+  position: fixed !important;
+}
+
+.sliderDelayTime::before {
+  content: "DELAY TIME";
+  line-height: 48px;
+  display: block;
+  position: fixed !important;
+}
+
+.sliderFreq::before {
+  content: "FREQUENCY";
+  line-height: 48px;
+  display: block;
+  position: fixed !important;
+}
+
+.sliderRes::before {
+  content: "RESONANCE";
+  line-height: 48px;
+  display: block;
+  position: fixed !important;
 }
