--- a/one_point/css/style.css
+++ b/one_point/css/style.css
@@ -14,6 +14,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 900;
   font-style: normal;
+  overflow: hidden;
 }
 
 *,
@@ -30,6 +31,10 @@ body {
   border-radius: 8px;
   box-shadow: 8px 8px 28px 8px rgba(0, 0, 0, 0.6) !important;
   background: linear-gradient(120deg, #ccc, #999) !important;
+}
+
+p {
+  font-weight: 400;
 }
 
 button {
@@ -124,4 +129,107 @@ input {
   line-height: 48px;
   display: block;
   position: fixed !important;
+}
+
+#openModalBtn {
+  display: block;
+  position: fixed;
+  left: 18vw;
+  top: 87vh;
+  width: 50px;
+  height: 50px;
+  padding: 0.5em 0 0 0;
+  font-size: 24px;
+  line-height: 0.9em;
+  font-weight: 600;
+  text-align: center;
+  color: dodgerblue;
+  border: 2px solid dodgerblue;
+  background-color: transparent;
+  border-radius: 50px !important;
+  box-shadow: 5px 3px 3px solid rgba(0, 0, 0, 0.6) !important;
+  z-index: 2;
+}
+
+#openModalBtn:hover {
+  cursor: pointer;
+  color: darkgray;
+  border: 4px double darkgray;
+  line-height: 0.8em;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  left: 22.5vw;
+  top: 2.5vh;
+  z-index: 5 !important;
+  width: 55vw;
+  height: 95vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 8px;
+}
+
+.helpWrapper:hover .modal {
+  display: block;
+}
+
+.modal-content {
+  background: linear-gradient(120deg, #ddd, #888888);
+  z-index: 5 !important;
+  margin: 6% auto;
+  padding: 30px;
+  border-radius: 4px;
+  width: 50vw;
+  height: 84vh;
+  text-align: center;
+  box-shadow: 1px 5px 5px rgb(20, 20, 20, 0.3);
+}
+
+.kb_img {
+  display: block;
+  width: 65vw;
+  margin: 0 auto;
+  padding: 0;
+  left: -25vw;
+}
+
+.keyboard {
+  display: block;
+  position: fixed;
+  width: 70vw;
+  left: 12vw;
+  top: -10vh;
+}
+
+ul {
+  text-align: left;
+  list-style-type: none;
+  width: 38vw;
+  margin: 35vh auto;
+  font-weight: 400;
+}
+
+li {
+  margin: 1em;
+}
+
+li::marker {
+  font-size: 1.75em;
+}
+
+.li_dk {
+  list-style-image: url(../img/dark_1.svg);
+}
+
+.li_md {
+  list-style-image: url(../img/mid_1.svg);
+}
+
+.li_lt {
+  list-style-image: url(../img/light_1.svg);
+}
+
+.li_yel {
+  list-style-image: url(../img/yellow_1.svg);
 }
