--- a/one_point/css/style.css
+++ b/one_point/css/style.css
@@ -206,7 +206,8 @@ ul {
   text-align: left;
   list-style-type: none;
   width: 38vw;
-  margin: 35vh auto;
+  margin: 50vh auto;
+  height: 30vh;
   font-weight: 400;
 }
 
