--- a/one_point/css/style.css
+++ b/one_point/css/style.css
@@ -206,7 +206,7 @@ ul {
   text-align: left;
   list-style-type: none;
   width: 30vw;
-  margin: 45vh auto;
+  margin: 45vh auto 0;
   height: 30vh;
   font-weight: 400;
 }
